# TestXpertGroup

./: .gitignore  README.md  main.py  pyproject.toml
config/: config.py  settings.py
data/processed/: citas_medicas_clean.csv  citas_medicas_rejected.csv  data_quality_issues.csv  pacientes_clean.csv  pacientes_rejected.csv
data/raw/: dataset_hospital 2.json
data/reports/: after_quality_metrics.csv  before_quality_metrics.csv  dwh.sqlite  profiling_before.json  quality_summary.json
docs/: ARCHITECTURE.md  Formato HV XPERT.docx  report_export_instructions.md  technical_report.md
src/: __init__.py
src/core/: __init__.py  audit.py  catalog_normalizers.py  cleaning_pk.py  logging_config.py  schemas.py  utils.py
src/extract/: __init__.py  ingestion_impl.py
src/load/: __init__.py  export_impl.py
src/load/dwh/: __init__.py  dims.py  facts.py  keys.py  loader.py  schema.py
src/pipeline/: __init__.py  pipeline_runner.py
src/report/: __init__.py
src/report/technical_report/: __init__.py  audit.py  executive.py  findings.py  generator.py  governance_dwh.py  helpers.py
src/transform/: __init__.py  profiling_impl.py  validation_impl.py
src/transform/cleaners/: citas_cleaner.py  pacientes_cleaner.py  pacientes_contact_cleaner.py
src/transform/metrics/: __init__.py  base.py  citas_metrics.py  pacientes_metrics.py  quality_metrics.py
tests/: conftest.py  test_cleaning.py  test_coverage_gaps.py  test_dwh.py  test_end_to_end_smoke.py  test_metrics.py  test_profiling.py  test_validation.py
