[project]
name = "testxpertgroup-hospital-dq"
version = "0.1.0"
description = "Prueba técnica: calidad, limpieza y auditoría de datos hospitalarios"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "python-dateutil>=2.9.0.post0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "black>=24.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=src --cov=config --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E402", "E501"]
